// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib cross-namespaces works 1`] = `
Object {
  "code": "LIBB10",
  "message": "Input validation failed",
  "metadata": Object {
    "package": "lib-b",
    "version": "0.2.0",
  },
  "name": "StackError",
  "stack": Array [
    Object {
      "code": "LIBA123",
      "message": "Input must be foo",
      "metadata": Object {
        "package": "lib-a",
        "version": "0.1.0",
      },
      "name": "StackError",
      "stack": Array [],
    },
  ],
}
`;

exports[`lib example code works 1`] = `
Object {
  "code": "LIB10",
  "message": "Input validation failed",
  "metadata": Object {
    "package": "my-lib",
    "version": "0.1.0",
  },
  "name": "StackError",
  "stack": Array [
    Object {
      "code": "LIB123",
      "message": "Input must be foo",
      "metadata": Object {
        "package": "my-lib",
        "version": "0.1.0",
      },
      "name": "StackError",
      "stack": Array [],
    },
  ],
}
`;
